WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106239
LayoutUnit(unsigned long long value) compile failure
https://bugs.webkit.org/show_bug.cgi?id=106239
Summary
LayoutUnit(unsigned long long value) compile failure
Eric Carlson
Reported
2013-01-07 11:45:19 PST
The LayoutUnit constructor which takes an unsigned long long fails to compile on some platforms when SATURATED_LAYOUT_ARITHMETIC is not defined because storing the result of ('unsigned long long' * 'int') into an int loses precision: Source/WebCore/platform/LayoutUnit.h:89:25: error: implicit conversion loses integer precision: 'unsigned long long' to 'int' [-Werror,-Wshorten-64-to-32] m_value = value * kEffectiveFixedPointDenominator; ~ ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Attachments
Proposed patch
(1.33 KB, patch)
2013-01-07 12:00 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated patch
(1.35 KB, patch)
2013-01-07 12:46 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-01-07 11:45:51 PST
<
rdar://problem/12967415
>
Eric Carlson
Comment 2
2013-01-07 12:00:45 PST
Created
attachment 181541
[details]
Proposed patch
Eric Carlson
Comment 3
2013-01-07 12:15:10 PST
Comment on
attachment 181541
[details]
Proposed patch This is the wrong approach, new patch coming shortly.
Eric Carlson
Comment 4
2013-01-07 12:46:10 PST
Created
attachment 181546
[details]
Updated patch
Eric Carlson
Comment 5
2013-01-07 12:55:44 PST
Committed
r138978
: <
http://trac.webkit.org/changeset/138978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug